# lihunlong_JSZN

./: .gitignore  CLAUDE.md  README.md  空中挑战赛_Unity仿真器_ROS2_PX4全栈接入指南_路线B.md
hunlong/: CLAUDE.md  仿真运行手册_里程碑1.md  国赛代码改动_工作总结与待办.md  国赛代码改动方案_220mm.md  国赛计划书_220mm.md  技术报告_附录_关键源码.md
scripts/: README_onekey.md  measure_mission_waypoints.py  onekey_common.sh  onekey_ego_arm.sh  onekey_ego_dryrun.sh  onekey_ego_manual.sh  onekey_sense_only.sh  onekey_start_mission.sh  onekey_start_waypoints.sh  race_start.sh  replay_latest_bag_rviz.sh
src/FAST_LIO/config/: unity_sim.yaml
src/activity_control_pkg/: CMakeLists.txt  package.xml
src/activity_control_pkg/include/activity_control_pkg/: route_target_publisher.hpp
src/activity_control_pkg/launch/: route_target_publisher_launch.py  route_test_launch.py
src/activity_control_pkg/src/: route_target_publisher.cpp  route_target_publisher_main.cpp  route_test_node.cpp
src/ego_px4_adapter/: CMakeLists.txt  package.xml
src/ego_px4_adapter/src/: ego_px4_adapter_node.cpp
src/ego_swarm/src/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/ego_swarm/src/planner/bspline_opt/src/: bspline_optimizer.cpp
src/ego_swarm/src/planner/plan_env/include/plan_env/: grid_map.h
src/ego_swarm/src/planner/plan_env/src/: grid_map.cpp
src/ego_swarm/src/planner/plan_manage/include/ego_planner/: ego_replan_fsm.h  planner_manager.h
src/ego_swarm/src/planner/plan_manage/launch/: advanced_param.launch.py
src/ego_swarm/src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp
src/lio_px4_bridge/: CMakeLists.txt  package.xml
src/lio_px4_bridge/config/: bridge.yaml
src/lio_px4_bridge/launch/: bridge.launch.py
src/lio_px4_bridge/src/: bridge_node.cpp
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/.claude/: settings.json
src/livox_ros_driver2/config/: MID360_config.json  display_point_cloud_ROS1.rviz
src/livox_ros_driver2/src/call_back/: livox_lidar_callback.cpp
src/pid_control_pkg/: CMakeLists.txt  package.xml
src/pid_control_pkg/include/pid_control_pkg/: pid_control.h
src/pid_control_pkg/src/: pid_control.cpp
src/px4_offboard_pkg/: CMakeLists.txt  package.xml
src/px4_offboard_pkg/config/: single_waypoint.yaml
src/px4_offboard_pkg/launch/: single_waypoint.launch.py
src/px4_offboard_pkg/src/: offboard_node.cpp
src/serial_comm/: CMakeLists.txt  package.xml
src/top_launch_pkg/: CMakeLists.txt  package.xml
src/top_launch_pkg/config/: mission.yaml
src/top_launch_pkg/launch/: ego_goal.launch.py  ego_multi_goal.launch.py  ego_planner_params.py  ego_real_flight.launch.py  ego_real_flight_easy.launch.py  ego_replay.launch.py  ego_sim_fast_lio.launch.py  ego_sim_flight.launch.py  lihunlong_run_launch.py  mission_executor.py  mission_start.launch.py  multi_waypoint_publisher.py  pose_relay.py  rc_altitude_mid360_velocity.launch.py  unity_ring_goal.launch.py
src/top_launch_pkg/rviz/: ego_debug.rviz
src/top_launch_pkg/scripts/: pointcloud_frame_republisher.py  pose_array_goal_sequencer.py  pose_relay.py  px4_sensor_combined_to_imu.py
src/uart_to_stm32/: CMakeLists.txt  package.xml
src/uart_to_stm32/include/: uart_to_stm32.h
src/uart_to_stm32/src/: uart_to_stm32.cpp  uart_to_stm32_node.cpp
