<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ego_px4_adapter</name>
  <version>0.1.0</version>
  <description>Convert ego-planner PositionCommand (ENU) to PX4 TrajectorySetpoint (NED).</description>
  <maintainer email="qiandd0221@gmail.com">orangepi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>quadrotor_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
