<?xml version="1.0"?>
<package format="3">
  <name>pid_control_pkg</name>
  <version>0.0.0</version>
  <description>PID controller for motion control</description>
  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
