<?xml version="1.0"?>
<package format="3">
  <name>top_launch_pkg</name>
  <version>0.0.0</version>
  <description>Top-level launch file orchestrator for lihunlong robot system</description>
  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fast_lio</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>lio_px4_bridge</exec_depend>
  <exec_depend>uart_to_stm32</exec_depend>
  <exec_depend>pid_control_pkg</exec_depend>
  <exec_depend>activity_control_pkg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
