<?xml version="1.0"?>
<package format="3">
  <name>uart_to_stm32</name>
  <version>0.0.0</version>
  <description>UART communication bridge to STM32 microcontroller</description>
  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>serial_comm</depend>

  <build_depend>libeigen3-dev</build_depend>
  <build_depend>libboost-system-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
